2007-07-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-exec-after): Don't move point from the sentinel.
	Forcefully read all the remaining text in the pipe upon process exit.
	(vc-annotate-display-autoscale, vc-annotate-lines):
	Don't stop at the first unrecognized line.
	(vc-annotate-display-select): Run autoscale after the process is done
	since it depends on the whole result.

2007-07-07  Eli Zaretskii  <eliz@gnu.org>

	* term/w32-win.el (menu-bar-open): New function.
	Bind <f10> to it.

2007-07-07  Michael Albinus  <michael.albinus@gmx.de>

	* simple.el (start-file-process): New defun.

2007-07-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (find-file-confirm-nonexistent-file): Rename from
	find-file-confirm-inexistent-file.  Update users.

	* emacs-lisp/autoload.el (autoload-find-destination): Understand a new
	format of autoload block where the file's time-stamp is replaced by its
	MD5 checksum.
	(autoload-generate-file-autoloads): Use MD5 checksum instead of
	time-stamp for secondary autoloads files.
	(update-directory-autoloads): Remove duplicate entries.
	Use time-less-p for time-stamps, as done in autoload-find-destination.

2007-07-07  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (math-read-number): Replace number by variable.
	(math-read-number-simple): Properly parse small integers.

2007-07-07  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el: Fix doc for the checkout function.

2007-07-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hg.el (vc-hg-root): New function.
	(vc-hg-registered): Use it.
	(vc-hg-diff-tree): New defalias.
	(vc-hg-responsible-p): Likewise.
	(vc-hg-checkout): Comment out, not needed.
	(vc-hg-delete-file, vc-hg-rename-file, vc-hg-could-register)
	(vc-hg-find-version, vc-hg-next-version): New functions.

2007-07-06  Andreas Schwab  <schwab@suse.de>

	* emacs-lisp/lisp-mode.el (eval-last-sexp): Avoid introducing any
	dynamic bindings around the evaluation of the expression.